--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,14 @@
     background-color: #f8d7da;
 }
 
+.formulario{
+    
+    position: relative;
+    margin-left: 10px;
+}
+
+
+
 
 
 
@@ -36,4 +44,10 @@ div.gallery img {
 }
 .card-footer{
     float: right;
+}
+
+.form-check-input{
+    
+    position: relative;
+    margin-left: 10px;
 }
